tests/ui/closures/2229_closure_analysis/nested-closure.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/nested-closure.rs:19:18
   |
LL |     let mut c1 = #[rustc_capture_analysis]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes on expressions are experimental
  --> $DIR/nested-closure.rs:30:22
   |
LL |         let mut c2 = #[rustc_capture_analysis]
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/nested-closure.rs:34:9
   |
LL |         || p.y += incr;
   |         ^^^^^^^^^^^^^^
   |
note: Capturing p[(1, 0)] -> Mutable
  --> $DIR/nested-closure.rs:34:12
   |
LL |         || p.y += incr;
   |            ^^^
note: Capturing incr[] -> Immutable
  --> $DIR/nested-closure.rs:34:19
   |
LL |         || p.y += incr;
   |                   ^^^^

error: Min Capture analysis includes:
  --> $DIR/nested-closure.rs:34:9
   |
LL |         || p.y += incr;
   |         ^^^^^^^^^^^^^^
   |
note: Min Capture p[(1, 0)] -> Mutable
  --> $DIR/nested-closure.rs:34:12
   |
LL |         || p.y += incr;
   |            ^^^
note: Min Capture incr[] -> Immutable
  --> $DIR/nested-closure.rs:34:19
   |
LL |         || p.y += incr;
   |                   ^^^^

error: First Pass analysis includes:
  --> $DIR/nested-closure.rs:23:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", p.x);
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> Immutable
  --> $DIR/nested-closure.rs:26:24
   |
LL |         println!("{}", p.x);
   |                        ^^^
note: Capturing p[(1, 0)] -> Mutable
  --> $DIR/nested-closure.rs:34:12
   |
LL |         || p.y += incr;
   |            ^^^
note: Capturing p[(1, 0)] -> Immutable
  --> $DIR/nested-closure.rs:44:24
   |
LL |         println!("{}", p.y);
   |                        ^^^

error: Min Capture analysis includes:
  --> $DIR/nested-closure.rs:23:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", p.x);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[(0, 0)] -> Immutable
  --> $DIR/nested-closure.rs:26:24
   |
LL |         println!("{}", p.x);
   |                        ^^^
note: Min Capture p[(1, 0)] -> Mutable
  --> $DIR/nested-closure.rs:34:12
   |
LL |         || p.y += incr;
   |            ^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
